# Netflix-clone

./: Cargo.toml  README.md  env.env  rustflix_db.sql
assets/css/: style.css
assets/js/: script.js
src/: main.rs
src/includes/: ajax_services.rs  category_service.rs  constants.rs  entity_service.rs  index_service.rs  login_service.rs  login_validator.rs  mod.rs  models.rs  movies_service.rs  profile_services.rs  profile_validator.rs  register_service.rs  register_validator.rs  shows_service.rs  watch_service.rs
templates/: category.html  entity.html  header.html  index.html  login.html  movies.html  navbar.html  notfound.html  profile.html  register.html  search.html  shows.html  watch.html
