[package]
name = "rustflix"
version = "0.1.0"
edition = "2021"
authors = ["Burak: <cehron@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
mailchecker = "5.0.7"
rust-argon2 = "1.0.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres"] }
tera = "1.18.0"
voca_rs = "1.15.2"
